# tree-sitter-toml

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml
bindings/go/: binding_test.go  go.mod
bindings/rust/: build.rs  lib.rs
src/: grammar.json  parser.c  scanner.c
